--- a/sample.html
+++ b/sample.html
@@ -17,10 +17,9 @@ function draw() {
  kage.kUseCurve = false;
  var polygons = new Polygons();
  
- kage.kBuhin.push("u9ebb", "1:0:2:40:37:143:37$4:22:5:143:37:12:169:170:169:175:171");
- kage.kBuhin.push("u9ebb-2", "99:0:0:0:0:200:200:u9ebb:0:0:0");
+ kage.kBuhin.push("u58eb-j", "1:0:0:15:82:185:82$1:0:32:100:19:100:169$1:0:0:26:169:174:169");
  
- kage.makeGlyph(polygons, "u9ebb-2");
+ kage.makeGlyph(polygons, "u58eb-j");
  
  ctx.fillStyle = "rgb(0, 0, 0)";
  
